# goconnect

./: .cursorrules  .editorconfig  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT.md  DEV_WORKFLOW.md  FAQ.md  GEMINI.md  INSTALLATION.md  LICENSE  MANUAL_SETUP.md  Makefile  QUICK_START.md  README.md  RELEASE.md  RELEASE_NOTES.md  SECURITY.md  SELF_HOSTED_SETUP.md  SETUP_WIZARD.md  TROUBLESHOOTING.md  VERSIONING.md  complete_setup.ps1  copilot-instructions.md  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  goreleaser.yml  installer.nsi  package-lock.json  package.json  release-please-config.json  simple_setup.ps1  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.specstory/: .project.json
Reports/: 2025-01-29_1830_jwt-configuration-integration.md  2025-10-29_01-13-18_comprehensive-project-analysis.md  2025-10-31_02-45-00_repository-layer-testing.md  2025-11-20_1740_jwt-implementation-completion.md  2025-11-21_admin-device-management-complete.md  2025-11-21_admin-pagination-implementation.md  2025-11-21_progress_report.md  2025-11-21_session_summary.md  2025-11-22_metrics_implementation.md  2025-11-25_device_offline_detection.md  2025-11-26_comprehensive_project_report.md  release-v2.5.0.md  release-v2.6.0.md  release-v2.7.0.md  release_v2.4.0.md
agent-os/: config.yml
cli/: .goreleaser.yaml  Makefile  README.md  (+5 more)
desktop/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: commands.rs  daemon.rs  lib.rs
(+1044 files in other folders)
